Added html and png for push

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>A variety of third party packages are used throughout this workshop. These are not necessarily the best, nor are they comprehensive, but they are packages we find useful, and have been chosen primarily for their usability.</p>
 <section class="prereq panel panel-warning">
 <div class="panel-heading">
-<h2><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
+<h2 id="prerequisites"><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
 </div>
 <div class="panel-body">
 <p>Have attended the Shell and Git sessions.</p>
