--- a/01-rstudio-intro.html
+++ b/01-rstudio-intro.html
@@ -270,7 +270,7 @@
     }
     else all.names
 }
-&lt;bytecode: 0x291b398&gt;
+&lt;bytecode: 0x265a398&gt;
 &lt;environment: namespace:base&gt;
 </code></pre>
 <p>You can use <code>rm</code> to delete objects you no longer need:</p>
