added bullet item in intro about packages

--- a/01-rstudio-intro.html
+++ b/01-rstudio-intro.html
@@ -40,6 +40,7 @@
 <li>To be able to manage your workspace in an interactive R session</li>
 <li>To be able to use mathematical and comparison operations</li>
 <li>To be able to call functions</li>
+<li>Introduction to package management</li>
 </ul>
 </div>
 </section>
@@ -265,7 +266,7 @@
     }
     else all.names
 }
-&lt;bytecode: 0x2a72f88&gt;
+&lt;bytecode: 0x2e17f88&gt;
 &lt;environment: namespace:base&gt;
 </code></pre>
 <p>You can use <code>rm</code> to delete objects you no longer need:</p>
