added gapminder exercises to index.html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
 </ol>
 <h2 id="other-resources">Other Resources</h2>
 <ul>
-<li><a href="reference.html">Reference</a></li>
-<li><a href="instructors.html">Instructor’s Guide</a></li>
-<li><a href="https://cran.r-project.org/web/package=gapminder">GapMinder package on CRAN</a></li>
+  <li><a href="gapminder_onecountry.Rmd">gapminder_onecountry.Rmd</a>
+  <li><a href="gapminder_threecountries.Rmd">gapminder_threecountries.Rmd</a>
+  <li><a href="gapminder_threebetter.Rmd">gapminder_threebetter.Rmd</a>
+  <li><a href="gapminder_final.Rmd">gapminder_final.Rmd</a>
+  <li><a href="reference.html">Reference</a></li>
+  <li><a href="instructors.html">Instructor’s Guide</a></li>
+  <li><a href="https://cran.r-project.org/web/package=gapminder">GapMinder package on CRAN</a></li>
 </ul>
         </div>
       </div>
